gets historical data (filling in from now until the past, scaling up page size from small to large so immediate results are seen). Also polls for `latest`, unshifting into the data set if it's not a known block. Visualization is nonsense but proves there are results.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <title>Bitcoin Visualizer</title>
     <link rel="stylesheet" href="dist/all.css"/>
+    <script type="text/javascript" src="dist/lib.js"></script>
+    <script type="text/javascript" src="dist/all.js"></script>
   </head>
   <body>
 
-    Loading...
+    <svg id="DataVis"></svg>
 
-    <script type="text/javascript" src="dist/all.js"></script>
   </body>
 </html>
