data vis almost functional. colors from ordinal range are selecting by index instead of data it looks like, odd

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script type="text/javascript" src="dist/all.js"></script>
   </head>
   <body>
-
-    <svg id="DataVis"></svg>
+    <h1><a href="https://github.com/SimplGy/bitcoin-visualizer">Bitcoin Visualizer</a></h1>
 
   </body>
 </html>
