bring in fast click library, mobile meta tag

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+
     <title>Bitcoin Visualizer</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="dist/all.css"/>
     <script type="text/javascript" src="dist/lib.js"></script>
     <script type="text/javascript" src="dist/all.js"></script>
+
   </head>
   <body>
     <h1><a href="https://github.com/SimplGy/bitcoin-visualizer">Bitcoin Visualizer</a></h1>
