Added a tip button. Thought about data structures too. Still working on that.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
   </head>
   <body>
-    <h1><a href="https://github.com/SimplGy/bitcoin-visualizer">Bitcoin Visualizer</a></h1>
+    <header>
+      <span class="title" href="">Bitcoin Visualizer</span>
+      <a class="help" href="https://github.com/SimplGy/bitcoin-visualizer">(huh?)</a>
+      <a href bitcoin-tip-address="14qCbYi6ET7HiZMG3HD5zumokskz2oJnjL">Tip Me a Coffee :)</a>
+    </header>
 
   </body>
 </html>
