Support running tests with `npm test`

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <span class="title" href="">Bitcoin Visualizer</span>
-      <a class="help" href="https://github.com/SimplGy/bitcoin-visualizer">(huh?)</a>
+      <a class="help" href="https://github.com/SimplGy/bitcoin/blob/master/README.md">(huh?)</a>
       <a href bitcoin-tip-address="14qCbYi6ET7HiZMG3HD5zumokskz2oJnjL">Tip Me a Coffee :)</a>
     </header>
 
