start of a migration to a very calendar-appearing GUI, with a "tip me bitcoin" link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <header>
       <span class="title" href="">Bitcoin Visualizer</span>
       <a class="help" href="https://github.com/SimplGy/bitcoin/blob/master/README.md">(huh?)</a>
-      <a href bitcoin-tip-address="14qCbYi6ET7HiZMG3HD5zumokskz2oJnjL">Tip Me a Coffee :)</a>
+      <a href bitcoin-tip-address="14qCbYi6ET7HiZMG3HD5zumokskz2oJnjL"><small>ⓑ</small> Tip me Coffee :)</a>
+
+      <!-- Ƀ -->
+      <!-- Ⓑ -->
+      <!-- ⓑ -->
     </header>
 
   </body>
