Move over some things from the old WIP main branch to the deployed gh-pages branch, including tip

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html>
-  <head>
 
-    <title>Bitcoin Visualizer</title>
+<title>Bitcoin Visualizer</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="dist/all.css"/>    
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<header>
+  <span class="title" href="">Bitcoin Visualizer</span>
+  <a class="help" href="https://github.com/SimplGy/bitcoin/blob/master/README.md">(huh?)</a>
+  <a href bitcoin-tip-address="14qCbYi6ET7HiZMG3HD5zumokskz2oJnjL"><small>ⓑ</small> Say Thanks! (Tip me some BTC :)</a>
 
-    <link rel="stylesheet" href="dist/all.css"/>
-    <script type="text/javascript" src="dist/lib.js"></script>
-    <script type="text/javascript" src="dist/all.js"></script>
+      <!-- Ƀ -->
+      <!-- Ⓑ -->
+      <!-- ⓑ -->
+</header>
 
-  </head>
-  <body>
-    <h1><a href="https://github.com/SimplGy/bitcoin-visualizer">Bitcoin Visualizer</a></h1>
-
-  </body>
-</html>
+<script type="text/javascript" src="dist/lib.js"></script>
+<script type="text/javascript" src="dist/all.js"></script>
